# de-forcefields

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: CI.yaml
deforcefields/: __init__.py  _version.py  deforcefields.py
deforcefields/data/: ethanol.sdf  water.sdf
deforcefields/offxml/: README.md  de-force-1.0.0.offxml  de-force-1.0.1.offxml  de-force-1.0.3.offxml  de-force_unconstrained-1.0.0.offxml  de-force_unconstrained-1.0.2.offxml  de-force_unconstrained-1.0.3.offxml
deforcefields/tests/: conftest.py  test_deforcefields.py
devtools/conda-envs/: test_env.yaml
