# Helper file to handle all configs

[coverage:run]
# .coveragerc to control coverage.py and pytest-cov
omit =
    # Omit the tests
    */tests/*
    # Omit generated versioneer
    deforcefields/_version.py

[flake8]
# Flake8, PyFlakes, etc
max-line-length = 88
ignore = E203, E266, E501, W503
select = B,C,E,F,W,T4,B9

[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=88

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.
[versioneer]
# Automatic version numbering scheme
VCS = git
style = pep440
versionfile_source = deforcefields/_version.py
versionfile_build = deforcefields/_version.py
tag_prefix = ''

[aliases]
test = pytest

[tool:pytest]
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[options]
python_requires = >=3.8, <=3.10
